--- a/biografi/index.html
+++ b/biografi/index.html
@@ -207,7 +207,7 @@
                     <div class="cls"></div>
                 </div>
                 <div class="ft-profil">
-                    <img src="https://scontent.fcgk34-1.fna.fbcdn.net/v/t39.30808-1/238903738_544185940183712_5075788066676847154_n.jpg?stp=dst-jpg_p200x200&_nc_cat=109&ccb=1-7&_nc_sid=7206a8&_nc_eui2=AeEwOqMEUigGEB41eL1_OahZqpgyirwbZa6qmDKKvBtlruRdMFfJ9iF07NTMm-DYQqTZE3wkxPQqwVZDhsoSj7lw&_nc_ohc=3ogOC1uvPwwAX_xvhfB&_nc_ht=scontent.fcgk34-1.fna&oh=00_AT_vLj3T6uZycGz1spFlrEN5lszSXt91uvEeWW28HqVEIg&oe=62F0CD7F"
+                    <img src="img/profile.jpg"
                         alt="Andi Ahmad Yusup">
                 </div>
                 <div class="card">
