--- a/alarmjs/index.html
+++ b/alarmjs/index.html
@@ -19,7 +19,8 @@
             <option value="PM">PM</option>
           </select>
         </div>
-        <button id="setButton" onClick="alarmSet()">SET ALARM</button>
+        <button id="setButton" onClick="alarmSet()">SET ALARM</button> <br>
+        <button id="clearButton" onclick="alarmClear()">CLEAR ALARM</button>
       </div>
     </div>
 
